Conclusao da page inicio e blog

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <nav class="menu">
                 <ul class="opcao-menu">
                     <li><a href="#">CURSOS</a></li>
-                    <li><a href="#">BLOG</a></li>
+                    <li><a href="./Pages/blog.html">BLOG</a></li>
                     <li><a href="#">CONTATO</a></li>
                 </ul>
             </nav>
