--- a/Pages/blog.html
+++ b/Pages/blog.html
@@ -10,9 +10,11 @@
 <body>
     <main>
         <div class="logo">
-        <img src="../imagens/dindin-logo.png" alt="logo">
+            <img src="../imagens/dindin-logo.png" alt="logo">
         <div class="dindin">
+            <a href="../index.html" id="linkpageinicio">
             <h1>dindin</h1>
+            </a>
         </div>
         <div>
             <nav class="menu">
