Páginas Curso e Post finalizadas

--- a/Pages/curso.html
+++ b/Pages/curso.html
@@ -19,18 +19,17 @@
             <div class="dindin">
                 <h1>dindin</h1>
             </div>
-            <div>
-                <nav class="menu">
-                    <ul class="opcao-menu">
-                        <li><a href="#">CURSOS</a></li>
-                        <li><a href="./Pages/blog.html">BLOG</a></li>
-                        <li><a href="#">CONTATO</a></li>
-                    </ul>
-                </nav>
-            </div>
+        </div>
+        <div>
+            <nav class="menu">
+                <ul class="opcao-menu">
+                    <li><a href="./cursos.html">CURSOS</a></li>
+                    <li><a href="./blog;.html">BLOG</a></li>
+                    <li><a href="./contato.html">CONTATO</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
-
     <main>
         <section class="cursoName">
             <div class="cursoName-text">
@@ -102,31 +101,33 @@
     </main>
 
     <footer>
-        <div class="logo2">
-            <img src="../imagens/dindin-logo.png" alt="" height="120px">
-            <div>
-                <h1 class="dindin2">dindin</h1>
+        <div class="logo-footer">
+            <img src="../imagens/dindin-logo.png" alt="logo" height="120px">
+            <div class="logo-footer-text">
+                <h1>dindin</h1>
+                <p>educação financeira</p>
             </div>
-            <div id="edufin">
-            <p>educação financeira</p>
-            </div>
-            <div>
-                <nav class="menu2">
-                    <ul class="opcao-menu2">
-                        <li>CURSOS</li>
-                        <li>BLOG</li>
-                        <li>CONTATO</li>
-                    </ul>
-                </nav>
-            </div>
-            <div>
-                <nav class="contato">
-                    <ul class="contato-opcao">
-                        <li><a href="#">quero ser prof</a></li>
-                        <li><a href="#">aqui tem outro link</a></li>
-                    </ul>
-                </nav>
-            </div>
+        </div>
+        <div>
+            <nav class="menu2">
+                <ul class="opcao-menu2">
+                    <a href="./cursos.html">
+                        <li>cursos</li>
+                    </a>
+                    <a href="./blog;.html">
+                        <li>blog</li>
+                    </a>
+                    <a href="./contato.html">
+                        <li>contato</li>
+                    </a>
+                </ul>
+            </nav>
+        </div>
+        <div>
+            <nav class="contato">
+                <a href="#"><button>quero ser prof</button></a>
+                <a href="#"> <button>aqui tem outro link</button></a>
+            </nav>
         </div>
     </footer>
 
