--- a/Pages/curso.html
+++ b/Pages/curso.html
@@ -14,12 +14,14 @@
 
 <body>
     <header>
-        <div class="logo">
-            <img src="../imagens/dindin-logo.png" alt="logo">
-            <div class="dindin">
-                <h1>dindin</h1>
+        <a href="../index.html">
+            <div class="logo">
+                <img src="../imagens/dindin-logo.png" alt="logo">
+                <div class="dindin">
+                    <h1>dindin</h1>
+                </div>
             </div>
-        </div>
+        </a>
         <div>
             <nav class="menu">
                 <ul class="opcao-menu">
