--- a/Pages/cursos.html
+++ b/Pages/cursos.html
@@ -4,9 +4,106 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="../CSS/cursos.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <title>Cursos</title>
 </head>
 <body>
-    
+    <header>
+        <a href="../index.html">
+            <div class="logo">
+                <img src="../imagens/dindin-logo.png" alt="logo">
+                <div class="dindin">
+                    <h1>dindin</h1>
+                </div>
+            </div>
+        </a>
+        <div>
+            <nav class="menu">
+                <ul class="opcao-menu">
+                    <li><a href="./cursos.html">CURSOS</a></li>
+                    <li><a href="./blog;.html">BLOG</a></li>
+                    <li><a href="./contato.html">CONTATO</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <section>
+            <div class="todos-os-cursos">
+                <div class="cursos">
+                <img class="imagem1" src="../imagens/Investimento para iniciantes.png" alt="" />
+                    <h2>Investimento para iniciantes</h2>
+                    <p class="legendas-imagens">Sed ut perspiciatis unde omnis iste natus 
+                    error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
+                    eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae
+                    vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas 
+                    sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores
+                    eos qui ratione voluptatem sequi nesciunt. </p>
+                    <a href="#">começar agora</a>
+                </div>    
+                <div>
+                    <hr id="linha-horizontal">
+                </div>   
+                <div class="cursos">
+                    <img class="imagem2" src="../imagens/Poupando e Rendendo.png" alt="" />
+                    <h2>Poupando e Rendendo</h2>
+                    <p class="legendas-imagens">Sed ut perspiciatis unde omnis iste natus 
+                    error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
+                    eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae
+                    vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas 
+                    sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores
+                    eos qui ratione voluptatem sequi nesciunt. </p>
+                    <a href="#">começar agora</a>
+                </div>    
+                <div>
+                    <hr id="linha-horizontal">
+                </div>
+                <div class="cursos">
+                     <img class="imagem3" src="../imagens/Independência Financeira.png" alt="" />
+                        <h2>Independência Financeira</h2>
+                        <p class="legendas-imagens">Sed ut perspiciatis unde omnis iste natus 
+                        error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
+                        eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae
+                        vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas 
+                        sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores
+                        eos qui ratione voluptatem sequi nesciunt. </p>
+                        <a href="#">começar agora</a>
+                </div>                         
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div class="logo-footer">
+            <img src="../imagens/dindin-logo.png" alt="logo" height="120px">
+            <div class="logo-footer-text">
+                <h1>dindin</h1>
+                <p>educação financeira</p>
+            </div>
+        </div>
+        <div>
+            <nav class="menu2">
+                <ul class="opcao-menu2">
+                    <a href="./cursos.html">
+                        <li>cursos</li>
+                    </a>
+                    <a href="./blog;.html">
+                        <li>blog</li>
+                    </a>
+                    <a href="./contato.html">
+                        <li>contato</li>
+                    </a>
+                </ul>
+            </nav>
+        </div>
+        <div>
+            <nav class="contato">
+                <a href="#"><button>quero ser prof</button></a>
+                <a href="#"> <button>aqui tem outro link</button></a>
+            </nav>
+        </div>
+    </footer>
 </body>
 </html>
