Corrigindo nomes da imagens e praparendo arquivos para merge

--- a/Pages/curso.html
+++ b/Pages/curso.html
@@ -44,7 +44,7 @@
                     nesciunt. </p>
             </div>
             <div class="cursoName-image">
-                <img src="../imagens/curso-img1.png" alt="imagem 1">
+                <img src="../imagens/Investimento para iniciantes.png" alt="imagem 1">
             </div>
         </section>
 
