--- a/Pages/post.html
+++ b/Pages/post.html
@@ -158,7 +158,7 @@
             <div class="cursos">
 
                 <div class="investimentoIniciantes">
-                    <img src="../imagens/curso-img1.png" alt="investimento para iniciantes" id="image-curso"
+                    <img src="../imagens/Investimento para iniciantes.png" alt="investimento para iniciantes" id="image-curso"
                         width="288px" height="279.06px">
                     <h3>Investimento para iniciantes</h3>
                     <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
@@ -167,7 +167,7 @@
                 </div>
 
                 <div class="poupandoRendendo">
-                    <img src="../imagens/poupando-rendendo.png" alt="poupando e rendendo" id="image-curso" width="238px"
+                    <img src="../imagens/Poupando e Rendendo.png" alt="poupando e rendendo" id="image-curso" width="238px"
                         height="279.06px">
                     <h3>Poupando e Rendendo</h3>
                     <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
@@ -176,7 +176,7 @@
                 </div>
 
                 <div class="independenciaFinanceira">
-                    <img src="../imagens/independencia-financeira.png" alt="independencia financeira" id="image-curso"
+                    <img src="../imagens/Independência Financeira.png" alt="independencia financeira" id="image-curso"
                         width="187px" height="279.06px">
                     <h3>Independencia Financeira</h3>
                     <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
