Atualizando a Page inico e Blog

--- a/Pages/blog.html
+++ b/Pages/blog.html
@@ -8,24 +8,26 @@
     <link rel="stylesheet" href="../CSS/blog.css">
 </head>
 <body>
-    <main>
-        <div class="logo">
-            <img src="../imagens/dindin-logo.png" alt="logo">
-        <div class="dindin">
-            <a href="../index.html" id="linkpageinicio">
-            <h1>dindin</h1>
-            </a>
-        </div>
+    <header>
+        <a href="../index.html">
+            <div class="logo">
+                <img src="../imagens/dindin-logo.png" alt="logo">
+                <div class="dindin">
+                    <h1>dindin</h1>
+                </div>
+            </div>
+        </a>
         <div>
             <nav class="menu">
                 <ul class="opcao-menu">
-                    <li><a href="#">CURSOS</a></li>
-                    <li><a href="../index.html">BLOG</a></li>
-                    <li><a href="#">CONTATO</a></li>
+                    <li><a href="./cursos.html">CURSOS</a></li>
+                    <li><a href="../Pages/blog.html">BLOG</a></li>
+                    <li><a href="./contato.html">CONTATO</a></li>
                 </ul>
             </nav>
         </div>
-        </div>
+        </header>
+    <main>
         <div class="mais-conteudo">
             <h1>MAIS CONTEÚDO PARA VOCÊ</h1>
             <div class="mais-abaixo">
@@ -74,31 +76,33 @@
             </section>
     </main>
     <footer>
-        <div class="logo2">
-            <img src="../imagens/dindin-logo.png" alt="" height="120px">
-            <div>
-                <h1 class="dindin2">dindin</h1>
+        <div class="logo-footer">
+            <img src="../imagens/dindin-logo.png" alt="logo" height="120px">
+            <div class="logo-footer-text">
+                <h1>dindin</h1>
+                <p>educação financeira</p>
             </div>
-            <div id="edufin">
-            <p>educação financeira</p>
-            </div>
-            <div>
-                <nav class="menu2">
-                    <ul class="opcao-menu2">
-                        <li>CURSOS</li>
-                        <li>BLOG</li>
-                        <li>CONTATO</li>
-                    </ul>
-                </nav>
-            </div>
-            <div>
-                <nav class="contato">
-                    <ul class="contato-opcao">
-                        <li><a href="#">quero ser prof</a></li>
-                        <li><a href="#">aqui tem outro link</a></li>
-                    </ul>
-                </nav>
-            </div>
+        </div>
+        <div>
+            <nav class="menu2">
+                <ul class="opcao-menu2">
+                    <a href="./cursos.html">
+                        <li>cursos</li>
+                    </a>
+                    <a href="./blog;.html">
+                        <li>blog</li>
+                    </a>
+                    <a href="./contato.html">
+                        <li>contato</li>
+                    </a>
+                </ul>
+            </nav>
+        </div>
+        <div>
+            <nav class="contato">
+                <a href="#"><button>quero ser prof</button></a>
+                <a href="#"> <button>aqui tem outro link</button></a>
+            </nav>
         </div>
     </footer>
 </body>
