--- a/index.html
+++ b/index.html
@@ -6,21 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./CSS/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <main>
-        <div class="logo">
-        <img src="./imagens/dindin-logo.png" alt="logo">
-        <div class="dindin">
-            <h1>dindin</h1>
-        </div>
+    <header>
+        <a href="../index.html">
+            <div class="logo">
+                <img src="./imagens/dindin-logo.png" alt="logo">
+                <div class="dindin">
+                    <h1>dindin</h1>
+                </div>
+            </div>
+        </a>
         <div>
             <nav class="menu">
                 <ul class="opcao-menu">
-                    <li><a href="#">CURSOS</a></li>
-                    <li><a href="./Pages/blog.html">BLOG</a></li>
-                    <li><a href="#">CONTATO</a></li>
+                    <li><a href="./cursos.html">CURSOS</a></li>
+                    <li><a href="../Pages/blog.html">BLOG</a></li>
+                    <li><a href="./contato.html">CONTATO</a></li>
                 </ul>
+            </nav>
+        </div>
+        </header>
             </nav>
         </div>
         </div>
@@ -58,80 +67,84 @@
         </div>
     </main>
     <main>
+        <h1 class="ex-alu">O QUE FALAM SOBRE NÓS</h1>
         <div class="comentarios-exalunos">
-            <h1>O QUE FALAM SOBRE NÓS</h1>
         <div class="personagens">
             <img id="personagen" src="./imagens/personagem1.png" alt="" height="95" width="100">
             <p id="comentario">”Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.”</p>
             <h4 id="idade">Wally, 25</h4>
         </div>
-        <div class="personagens2">
+        <div class="personagens">
             <img id="personagen" src="./imagens/personagem2.png" alt="" height="100" width="100">
-            <p id="comentario2">”Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.”</p>
-            <h4 id="idade2">Jaden Smith, 23</h4>
-        </div>
-        <div class="personagens3">
-            <img id="personagen" src="./imagens/personagem3.png" alt="" height="100" width="140">
             <p id="comentario">”Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.”</p>
-            <h4 id="idade">Whoopi Goldberg, 37</h4>
-        </div>
-        <div class="personagens4">
-            <img id="personagen" src="./imagens/personagem4.png" alt="" height="100" width="100">
-            <p id="comentario2">”Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.”</p>
-            <h4 id="idade2">Janes Joplin, 29</h4>
+            <h4 id="idade">Jaden Smith, 23</h4>
         </div>
         </div>
+        <div class="comentarios-exalunos2">
+            <div class="personagens">
+                <img id="personagen" src="./imagens/personagem3.png" alt="" height="100" width="110">
+                <p id="comentario">”Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.”</p>
+                <h4 id="idade">Whoopi Goldberg, 37</h4>
+            </div>
+            <div class="personagens">
+                <img id="personagen" src="./imagens/personagem4.png" alt="" height="100" width="100">
+                <p id="comentario">”Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.”</p>
+                <h4 id="idade">Janes Joplin, 29</h4>
+            </div>
+            </div>
     </main>
     <main class="main4">
-        <div class="img2">
-            <img src="./imagens/bloco-cinza.png" alt="" height="220px">
-            <h1 class="titulo2">Itaque earum rerum</h1>
-            <p id="aa">hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</p>
-        </div>
-        <div class="img2">
-            <img src="./imagens/bloco-cinza.png" alt="" height="220px">
-            <h1 class="titulo2">Itaque earum rerum</h1>
-            <p id="aa">hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</p>
-        </div>
-        <div class="img2">
-            <img src="./imagens/bloco-cinza.png" alt="" height="220px">
-            <h1 class="titulo2">Itaque earum rerum</h1>
-            <p id="aa">hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</p>
-        </div>
-    </main>
-    <div class="botao2">
-        <a href="#">ver todos os posts</a>
-    </div>
-    <div class="conteudo">
-        <h1>MAIS CONTEÚDO PARA VOCÊ</h1>
-        </div>
-    <footer>
-        <div class="logo2">
-            <img src="./imagens/dindin-logo.png" alt="" height="120px">
-            <div>
-                <h1 class="dindin2">dindin</h1>
+        <h1 id="mais-conteudo">MAIS CONTEÚDO PARA VOCÊ</h1>
+        <div class="blocos-cinzas">
+            <div class="conteudo">
+                <img src="./imagens/bloco-cinza.png" alt="bloco cinza" height="300">
+                <h1 id="titulo12">Itaque earum rerum</h1>
+                <p id="p12">hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</p>
             </div>
-            <div id="edufin">
-            <p>educação financeira</p>
+            <div class="conteudo">
+                <img src="./imagens/bloco-cinza.png" alt="bloco cinza" height="300">
+                <h1 id="titulo12">Itaque earum rerum</h1>
+                <p id="p12">hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</p>
+            </div>
+            <div class="conteudo">
+                <img src="./imagens/bloco-cinza.png" alt="bloco cinza" height="300">
+                <h1 id="titulo12">Itaque earum rerum</h1>
+                <p id="p12">hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</p>
+            </div>
+        </div>
+        <a href="#" id="link-post"><p>ver todos os posts</p></a>
+    </main>
+
+    </main>
+        <footer>
+            <div class="logo-footer">
+                <img src="./imagens/dindin-logo.png" alt="logo" height="120px">
+                <div class="logo-footer-text">
+                    <h1>dindin</h1>
+                    <p>educação financeira</p>
+                </div>
             </div>
             <div>
                 <nav class="menu2">
                     <ul class="opcao-menu2">
-                        <li>CURSOS</li>
-                        <li>BLOG</li>
-                        <li>CONTATO</li>
+                        <a href="./cursos.html">
+                            <li>cursos</li>
+                        </a>
+                        <a href="./blog;.html">
+                            <li>blog</li>
+                        </a>
+                        <a href="./contato.html">
+                            <li>contato</li>
+                        </a>
                     </ul>
                 </nav>
             </div>
             <div>
                 <nav class="contato">
-                    <ul class="contato-opcao">
-                        <li><a href="#">quero ser prof</a></li>
-                        <li><a href="#">aqui tem outro link</a></li>
-                    </ul>
+                    <a href="#"><button>quero ser prof</button></a>
+                    <a href="#"> <button>aqui tem outro link</button></a>
                 </nav>
             </div>
-        </div>
-    </footer>
+        </footer>
 </body>
 </html>
